--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "astro": "^5.7.13",
     "portfolio": "file:",
     "tailwindcss": "^4.1.7"
+  },
+  "devDependencies": {
+    "tailwindcss-bg-patterns": "^0.3.0"
   }
 }
