--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.13",
     "portfolio": "file:",
